--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,19 @@
     <title>Chat</title>
 </head>
 <body ng-app="Chat" ng-cloak>
-    <h1>Bl</h1>
+    <h1>Bienvenu sur le chat</h1>
     <div ng-view></div>
 
-    <script src="./libs/angular/angular.min.js"></script>
-    <script src="./libs/angular-route/angular-route.min.js"></script>
-    <script src="./javascript/angApp.js"></script>
-    <script src="./javascript/controller/maincontroller.js"></script>
-    <script src="./javascript/factory/socket.factory.js"></script>
-    <script src="/libs/angular-socket-io/socket.js"></script>
-    <script src="/libs/socket.io-client/dist/socket.io.js"></script>
-    <script src="/libs/jquery/dist/jquery.js"></script>
+    <script src="modules/angular/angular.js"></script>
+    <script src="modules/angular-route/angular-route.min.js"></script>
+    <script src="javascript/angApp.js"></script>
+    <script src="javascript/controller/maincontroller.js"></script>
+    <script src="javascript/factory/socket.factory.js"></script>
+    <script src="modules/angular-socket-io/socket.js"></script>
+    <script src="modules/socket.io-client/dist/socket.io.js"></script>
+    <script src="modules/jquery/dist/jquery.js"></script>
 
-    <script src="/libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
 
 </body>
