--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>Chat</title>
 </head>
 <body ng-app="Chat" ng-cloak>
-    <h1>Bienvenu sur le chat</h1>
+    <h1>Bienvenue sur le chat</h1>
     <div ng-view></div>
 
     <script src="modules/angular/angular.js"></script>
